# CoCsCube

./: .gitignore  CMakeLists.txt  analysis.ipynb  init.mac  run1.mac  vis.mac
.ipynb_checkpoints/: analysis-checkpoint.ipynb  main-checkpoint.cc  vis-checkpoint.mac
include/: MyAction.hh  MyConstruction.hh  MyGenerator.hh
src/: MyAction.cc  MyConstruction.cc  MyDetector.cc  MyGenerator.cc  MyPhysics.cc  MyRun.cc
